[metadata]
name = ow2-cache-merge
version = 1.0.0
author = Levent Guney
author_email = dtleventmobile@gmail.com
license = MIT
description = A tool for downloading and merging multiple Overwatch 2 dxvk cache files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Overwatch2, Overwatch, dxvk, cache, merge
Home-page = https://github.com/leventguney/ow2-cache-merge

[options]
install_requires =
    loguru
    toml
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    ow2-cache-merge = ow2_cache_merge.main:main